# my-career-agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
Me/: Profile_Summary.txt
